[144] [omnibox-next] Fix spacing header issues.
See recording and screenshot in the bugs.

(cherry picked from commit 6524b051a15841adcf94358cc76ed090e78b2e03)

Fixed: b:473592121, b:471299095
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7405235
Commit-Queue: Teresa Mao <temao@chromium.org>
Cr-Original-Commit-Position: refs/heads/main@{#1565296}
Bug: 475338251
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7453420
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3411}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/chrome/browser/resources/omnibox_popup/app.css
+++ b/chrome/browser/resources/omnibox_popup/app.css
@@ -10,6 +10,7 @@
  * #css_wrapper_metadata_end */
 
 :host {
+  --cr-searchbox-dropdown-header-padding-inline-start: 16px;
   --cr-searchbox-results-search-icon-size: 16px;
   --cr-searchbox-icon-container-size: 28px;
   --cr-searchbox-match-icon-container-background-fallback: var(--color-omnibox-results-background-hovered);
@@ -66,9 +67,14 @@ contextual-entrypoint-and-carousel[searchbox-layout-mode="TallBottomContext"] {
   --contextual-entrypoint-and-carousel-context-menu-container-margin-bottom: 9px;
 }
 
-contextual-entrypoint-and-carousel[searchbox-layout-mode="Compact"]:not([show-dropdown]),
-contextual-entrypoint-and-carousel[searchbox-layout-mode="TallTopContext"]:not([show-dropdown]) {
-  --contextual-entrypoint-and-carousel-context-menu-container-margin-bottom: 9px;
+contextual-entrypoint-and-carousel[searchbox-layout-mode="Compact"],
+contextual-entrypoint-and-carousel[searchbox-layout-mode="TallTopContext"] {
+  --contextual-entrypoint-and-carousel-contextual-chip-padding-bottom: 10px;
+
+  &:not([show-dropdown]) {
+    --contextual-entrypoint-and-carousel-contextual-chip-padding-bottom: 0px;
+    --contextual-entrypoint-and-carousel-context-menu-container-margin-bottom: 9px;
+  }
 }
 
 /**
